refactoring - PPInclude: cache file exists to speed up #include - setStandardIncludeDirs: avoid duplicates to speed up #include - CxxSquidConfiguration: add readFromFile / writeToFile - MacroContainer: add readFromFile / writeToFile - replace Paths.get with Path.of - use Path instead of File